[project]
name = "dp-nlp-berlin-api"
version = "0.0.1"
authors = [
    {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
]
description = "A Python/Rust microservice to identify locations and tag them with UN-LOCODEs"
readme = "README.md"
requires-python = ">=3.10,<4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "Flask>=2.0.2<2.1",
    "structlog>=21.5.0,<21.6",
    "python-dateutil>=2.8.2,<2.9",
    "berlin>=0.3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5,<6.3",
    "flake8>=4.0.1,<4.1",
    "pylint>=2.15.4,<2.16",
    "pylint-quotes>=0.2.3,<0.3",
    "pytest-cov>=3.0.0,<3.1",
    "pytest-xdist>=2.5.0,<2.6",
    "pytest-sugar>=0.9.4,<0.10",
    "black>=22.10.0,<22.11"
]

[tool.black]
target_version = ['py38']

[tool.poetry]
name = "dp-nlp-berlin-api"
version = "0.1.0"
description = "API for location matching"
authors = ["ONSDigital"]

packages = [
    { include = "dp_nlp_berlin_api", from = "app" },
]


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
structlog = "^21.5.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pylint = "^2.15.4"
pylint-quotes = "^0.2.3"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-sugar = "^0.9.4"
black = "^22.10.0"
berlin = "^0.3.0"

#[tool.setuptools.packages.find]
#where = ["src"]
#
#[build-system]
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
